--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
     <html lang="tr">
         <!-- 
-        -------DESIGNED AND DEVELOPED BY KUTDEV MEHMET KUZEY DEMİRTAŞ--------
+ -----------------------------------------
+/   /  |        |    --------------
+/  /   |        |           |
+/ /    |        |           |
+//     |        |           |
+/ /    |        |           |
+/  /   |        |           |
+/   /  |        |           |
+/    / |________|           |
+-----------------------------------------
+\\\\\DESIGNED AND DEVELOPED BY KUTDEV MEHMET KUZEY DEMİRTAŞ/////////
 
-        ----------/////////
-        /////////----------
-        KUTDEV KUTDEV KUTDEV
+
         
         -->
     <head>
